Completed home fragments and favorite activity, added Room DB for storing favorite products.

--- a/app/src/main/res/layout/fragment_burger.xml
+++ b/app/src/main/res/layout/fragment_burger.xml
@@ -3,13 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/home_screen_color"
     tools:context=".fragments.BurgerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Burgers" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/burger_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingEnd="0dp"
+        app:spanCount="2"
+        tools:listitem="@layout/pizza_fragment_list_item" />
 
 </RelativeLayout>
