--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,33 +12,16 @@
         android:id="@+id/home_appbarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:textAlignment="center">
-
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
+            android:id="@+id/home_topAppBar"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimaryDark"
-            android:gravity="center_horizontal"
-            android:textAlignment="center"
-            app:menu="@menu/home_menu">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:gravity="center_horizontal"
-                android:text="@string/home_title"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/_18ssp"
-                android:textStyle="bold"
-                app:titleTextAppearance="@style/AppbarTitleStyle" />
+            app:menu="@menu/home_menu"
+            app:title="Home">
         </com.google.android.material.appbar.MaterialToolbar>
-
     </com.google.android.material.appbar.AppBarLayout>
 
 
