--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="MaterialActivityWhite" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_baseline_arrow_back_24</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 
     <style name="CustomChipChoice" parent="@style/Widget.MaterialComponents.Chip.Choice">
         <item name="chipBackgroundColor">@color/home_chip_background_selector</item>
@@ -34,10 +40,27 @@
     <style name="ChipTextStyle" parent="TextAppearance.MaterialComponents.Chip">
         <item name="android:textSize">@dimen/_12ssp</item>
     </style>
+    <!-- ToolBar -->
+    <style name="ToolBarStyle" parent="Theme.MaterialComponents">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+    </style>
 
     <style name="AppbarTitleStyle" parent="TextAppearance.MaterialComponents.Headline1">
-        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textSize">@dimen/_18ssp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="product_title_style">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">#686666</item>
+        <item name="android:textSize">@dimen/_18ssp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="TransparentMaterialAppbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 
