--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center">
+
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/home_topAppBar"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
@@ -20,8 +21,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimaryDark"
             app:menu="@menu/home_menu"
-            app:title="Home">
-        </com.google.android.material.appbar.MaterialToolbar>
+            app:title="Home"></com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
 
@@ -84,15 +84,15 @@
             app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/burgerChip"
+                style="@style/CustomChipChoice"
+                android:text="@string/burgers_title" />
+
+            <com.google.android.material.chip.Chip
                 android:id="@+id/pizzaChip"
                 style="@style/CustomChipChoice"
                 android:text="@string/pizzas_title"
                 android:textAppearance="@style/ChipTextStyle" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/burgerChip"
-                style="@style/CustomChipChoice"
-                android:text="@string/burgers_title" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/rollsChip"
