--- a/app/src/main/res/layout/product_slideview_layout.xml
+++ b/app/src/main/res/layout/product_slideview_layout.xml
@@ -17,18 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/slide_down_icon"
+            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
             app:tint="@color/colorPrimaryDark" />
-
-        <TextView
-            android:id="@+id/doneButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
-            android:text="Done"
-            android:textColor="@color/colorPrimaryDark" />
 
     </RelativeLayout>
 
@@ -37,7 +27,7 @@
         android:id="@+id/innerMainRlSlideView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/handleRl"></RelativeLayout>
+        android:layout_below="@id/handleRl"/>
 
 </RelativeLayout>
 
