--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,7 +60,8 @@
         <item name="android:textStyle">bold</item>
     </style>
     <style name="TransparentMaterialAppbar" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="android:background">@android:color/transparent</item>
+        <item name="android:background">@null</item>
+        <item name="android:elevation">0dp</item>
     </style>
 
 
