--- a/app/src/main/res/layout/product_slideview_layout.xml
+++ b/app/src/main/res/layout/product_slideview_layout.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
+            android:contentDescription="@string/slideViewHandleDesc"
             app:tint="@color/colorPrimaryDark" />
 
     </RelativeLayout>
@@ -28,7 +29,7 @@
         android:layout_below="@id/handleRl">
 
         <TextView
-            android:id="@+id/product_total_cart"
+            android:id="@+id/product_total_cartItems"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -36,18 +37,18 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/balsamiq_sans_regular"
-            android:text="3 Items in Your Cart" />
+            android:text="@string/no_of_items_slideview" />
 
         <TextView
             android:id="@+id/product_slideview_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/product_total_cart"
+            android:layout_below="@id/product_total_cartItems"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/balsamiq_sans_bold"
-            android:text="Pepperoni Pizza"
+            android:text="@string/placeholder_fav_title"
             android:textSize="@dimen/_23ssp" />
 
         <LinearLayout
@@ -67,7 +68,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:fontFamily="@font/balsamiq_sans_bold"
-                android:text="Rs. 230"
+                android:text="@string/price_placeholder"
                 android:textColor="#FFDA00"
                 android:textSize="@dimen/_20ssp" />
 
@@ -83,7 +84,7 @@
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/intro_getstarted_button_style"
+                    android:background="@drawable/product_quantity_button_style"
                     android:src="@drawable/remove_product_icon"
                     android:tint="@android:color/white" />
 
@@ -101,7 +102,8 @@
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/intro_getstarted_button_style"
+                    android:background="@drawable/product_quantity_button_style"
+                    android:rotation="180"
                     android:src="@drawable/add_product_icon"
                     android:tint="@android:color/white" />
             </LinearLayout>
