--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_screen_color"
-    tools:context=".activities.HomeActivity">
+    tools:context=".fragments.HomeFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/home_appbarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/home_topAppBar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimaryDark"
-            app:menu="@menu/home_menu"
-            app:title="Home"/>
-    </com.google.android.material.appbar.AppBarLayout>
 
 
     <RelativeLayout
         android:id="@+id/home_top_viewpager_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/home_appbarLayout"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:paddingHorizontal="@dimen/_4sdp"
@@ -51,6 +37,19 @@
             app:tabIndicatorHeight="0dp">
 
         </com.google.android.material.tabs.TabLayout>
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/home__viewpager_shimmerContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            shimmer:duration="800">
+
+            <include layout="@layout/home_viewpager_placeholder" />
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/home_top_viewpager"
