--- a/app/src/main/res/layout/fragment_rolls.xml
+++ b/app/src/main/res/layout/fragment_rolls.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rolls_fragment_rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_screen_color"
     tools:context=".fragments.RollsFragment">
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/rolls_shimmer_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        shimmer:duration="800">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/fragment_placeholder_layout" />
+
+            <include layout="@layout/fragment_placeholder_layout" />
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rolls_recyclerview"
