--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -100,7 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:text="TextView"
+                    android:text="Already have account? Login here"
                     android:textAlignment="center"
                     android:textSize="16sp" />
             </LinearLayout>
