Added complete functionality in PendingOrdersFragment.kt, added bouncing effect in CartActivity.kt RecyclerView, and fixed last item removal bug in CartActivity.kt RecyclerView.

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -97,7 +97,7 @@
         android:visibility="gone"
         android:textColor="#F96167" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.chauthai.overscroll.RecyclerViewBouncy
         android:id="@+id/cart_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
