--- a/app/src/main/res/layout/fragment_pending_orders.xml
+++ b/app/src/main/res/layout/fragment_pending_orders.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/home_screen_color"
     tools:context=".fragments.PendingOrdersFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Pending Orders" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pendingOrders_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/_12sdp"
+        android:paddingTop="@dimen/_12sdp"
+        android:paddingEnd="@dimen/_12sdp"
+        tools:listitem="@layout/favorites_list_item" />
 </RelativeLayout>
