--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,9 +25,9 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/login_image"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_250sdp"
-                app:srcCompat="@drawable/login_img" />
+                android:layout_height="@dimen/_250sdp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
