--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/signUp_rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/signUp_rootLayout"
     android:background="@android:color/white"
     tools:context=".activities.SingupActivity">
 
@@ -20,9 +20,9 @@
 
 
             <ImageView
+                android:id="@+id/signUp_image"
                 android:layout_width="match_parent"
-                android:layout_height="310dp"
-                app:srcCompat="@drawable/signup_img" />
+                android:layout_height="310dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
