--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -22,28 +22,29 @@
             <ImageView
                 android:id="@+id/signUp_image"
                 android:layout_width="match_parent"
-                android:layout_height="310dp" />
+                android:layout_height="@dimen/_250sdp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:padding="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:text="Sign Up"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="30sp"
+                    android:textSize="@dimen/_30ssp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/name_textinput_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp">
+                    android:layout_width="@dimen/login_component_width"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginBottom="@dimen/_10sdp">
 
                     <EditText
                         android:id="@+id/signup_name_input"
@@ -51,28 +52,30 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="Name"
-                        android:inputType="text" />
+                        android:inputType="text"
+                        android:textSize="@dimen/_12ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/email_textinput_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="@dimen/login_component_width"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_marginBottom="@dimen/_10sdp">
 
                     <EditText
                         android:id="@+id/signup_email_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
                         android:ems="10"
                         android:hint="Email"
-                        android:inputType="textEmailAddress" />
+                        android:inputType="textEmailAddress"
+                        android:textSize="@dimen/_12ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/password_textinput_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/login_component_width"
+                    android:layout_height="@dimen/_40sdp"
                     android:layout_marginBottom="25dp"
                     app:passwordToggleEnabled="true">
 
@@ -82,27 +85,29 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:hint="Password"
-                        android:inputType="textPassword" />
+                        android:inputType="textPassword"
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
                     android:id="@+id/signup_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_width="@dimen/login_component_width"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/intro_getstarted_button_style"
                     android:text="Sign Up"
+                    android:textSize="@dimen/_12ssp"
                     android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/login_text"
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/login_component_width"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="@dimen/_20sdp"
                     android:text="Already have account? Login here"
                     android:textAlignment="center"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/_12ssp" />
             </LinearLayout>
 
         </LinearLayout>
